# phpcbf-Formatter

./: .editorconfig  .gitattributes  .gitignore  Context.sublime-menu  Default (Linux).sublime-keymap  LICENSE  Main.sublime-menu  README.md  composer.json  editor.sublime-project  formatter-test.php  phpcbf-Formatter.py  phpcbf-Formatter.sublime-commands  phpcbf-Formatter.sublime-settings  phpcs.xml  pyproject.toml  repository-package.json  requirements.txt  taskfile.dist.yml
